# PseudoBolo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: Makefile  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
docs/source/: api.rst  conf.py  index.rst
scripts/: compare_idl.py  run_wizard.py
src/pseudobolo/: __init__.py  aux.py  make_bol_lc.py  mklcbolinput.py
